grammars/tidal_mini/test/test/corpus/spec_examples.txt
================================================================================
Rest token (~)
================================================================================

~ hh

--------------------------------------------------------------------------------

(source_file
  (rest)
  (event (identifier)))

================================================================================
Step repetition (*)
================================================================================

bd*2 sd

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (repeat_suffix (number))
  (event (identifier)))

================================================================================
Step division (/)
================================================================================

bd/2

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (divide_suffix (number)))

================================================================================
Replication suffix (!N)
================================================================================

bd!3 sd

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (replicate_suffix (number))
  (event (identifier)))

================================================================================
Replication suffix bare (!)
================================================================================

bd!

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (replicate_suffix))

================================================================================
Elongation marker (_)
================================================================================

bd _ _ ~ sd _

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (elongation)
  (elongation)
  (rest)
  (event (identifier))
  (elongation))

================================================================================
Elongation suffix (@N)
================================================================================

superpiano@3 superpiano

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (elongate_suffix (number))
  (event (identifier)))

================================================================================
Probabilistic removal default (?)
================================================================================

bd? sd

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (probability_suffix)
  (event (identifier)))

================================================================================
Probabilistic removal explicit (?0.8)
================================================================================

bd hh? bd hh?0.8

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (event (identifier))
  (probability_suffix)
  (event (identifier))
  (event (identifier))
  (probability_suffix (number)))

================================================================================
Sample selection (:N)
================================================================================

bd:3

--------------------------------------------------------------------------------

(source_file
  (event (identifier) (number)))

================================================================================
Sample selection sequence
================================================================================

arpy:1 arpy:2 arpy:3

--------------------------------------------------------------------------------

(source_file
  (event (identifier) (number))
  (event (identifier) (number))
  (event (identifier) (number)))

================================================================================
Numeric ratio (%N)
================================================================================

bd*4%2

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (repeat_suffix (number))
  (ratio_suffix (number)))

================================================================================
Random choice in brackets (|)
================================================================================

[bd|hh|cp]

--------------------------------------------------------------------------------

(source_file
  (group
    (event (identifier))
    (event (identifier))
    (event (identifier))))

================================================================================
Group brackets ([])
================================================================================

[bd sd] hh

--------------------------------------------------------------------------------

(source_file
  (group
    (event (identifier))
    (event (identifier)))
  (event (identifier)))

================================================================================
Alternation brackets (<>)
================================================================================

bd <sd hh cp>

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (alternation
    (event (identifier))
    (event (identifier))
    (event (identifier))))

================================================================================
Polymetric braces with comma superposition
================================================================================

{bd bd bd, cp cp hh}

--------------------------------------------------------------------------------

(source_file
  (polymetric
    (event (identifier))
    (event (identifier))
    (event (identifier))
    (event (identifier))
    (event (identifier))
    (event (identifier))))

================================================================================
Polymetric with subdivision
================================================================================

{bd hh}%8

--------------------------------------------------------------------------------

(source_file
  (polymetric
    (event (identifier))
    (event (identifier))
    (number)))

================================================================================
Euclidean rhythm (B,S)
================================================================================

bd(3,8)

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (euclid_suffix (number) (number)))

================================================================================
Euclidean with offset (B,S,O)
================================================================================

bd(3,8,1)

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (euclid_suffix (number) (number) (number)))

================================================================================
Superposition inside group (,)
================================================================================

[bd*2,hh*3]

--------------------------------------------------------------------------------

(source_file
  (group
    (event (identifier))
    (repeat_suffix (number))
    (event (identifier))
    (repeat_suffix (number))))

================================================================================
Top-level dot grouping
================================================================================

bd*3 . hh*4 cp

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (repeat_suffix (number))
  (event (identifier))
  (repeat_suffix (number))
  (event (identifier)))

================================================================================
Nested subdivisions
================================================================================

[bd [hh [cp sn:2] hh]] bd bd bd

--------------------------------------------------------------------------------

(source_file
  (group
    (event (identifier))
    (group
      (event (identifier))
      (group
        (event (identifier))
        (event (identifier) (number)))
      (event (identifier))))
  (event (identifier))
  (event (identifier))
  (event (identifier)))
